# Students

./: .gitignore  CMakeLists.txt  README.md
bench/: CMakeLists.txt  bench_kompress.cpp
src/: CMakeLists.txt  kompress.c  kompress.h  kompress_mmap.c  kompress_mmap.h  kompress_readwrite.c  kompress_readwrite.h  kompress_stdio.c  kompress_stdio.h  kompress_utils.h  main.c
test/: CMakeLists.txt  crc32.hpp  test_kompress.cpp  test_mmap.cpp  testutils.cpp  testutils.h  wrapper.c  wrapper.h
